force-app/main/default/objects/Task_History_Matrix__c/Task_History_Matrix__c.object-meta.xml
<CustomObject>
    <label>Task History Matrix</label>
    <nameField>
        <displayFormat>THM-{0000}</displayFormat>
        <label>Task History Matrix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task History Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>