force-app/main/default/objects/Task_History_Matrix__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Task_History_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>