force-app/main/default/objects/Task_History_Matrix__c/fields/Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>Task History Matrix</relationshipLabel>
    <relationshipName>Task_History_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>