force-app/main/default/objects/Task_History_Matrix__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>