force-app/main/default/objects/Task_History_Matrix__c/fields/Task_SLA_Missed__c.field-meta.xml
<CustomField>
    <fullName>Task_SLA_Missed__c</fullName>
    <label>Task SLA Missed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>