force-app/main/default/objects/Task_History_Matrix__c/fields/Time_Spend__c.field-meta.xml
<CustomField>
    <fullName>Time_Spend__c</fullName>
    <formula>IF(ISBLANK( End_Time__c ),  NOW() - Start_Time__c ,End_Time__c -  Start_Time__c)</formula>
    <label>Time Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>