force-app/main/default/objects/Task_History_Matrix__c/fields/Total_No_Of_Task__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Task__c</fullName>
    <label>Total No Of Task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>