force-app/main/default/objects/Task_History_Matrix__c/listViews/Accounts_DO_Task_History_Matrix.listView-meta.xml
<ListView>
    <fullName>Accounts_DO_Task_History_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>Accounts - DO</label>
    <queue>Accounts_DO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>