force-app/main/default/objects/Task_History_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OpportunityId__c</columns>
    <columns>TaskId__c</columns>
    <columns>Process_Attribute_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Age__c</columns>
    <columns>Time_Spend__c</columns>
    <columns>Task_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>