force-app/main/default/objects/Task_History_Matrix__c/listViews/Branch_Opeartions_Rajkot_Task_History_Matrix.listView-meta.xml
<ListView>
    <fullName>Branch_Opeartions_Rajkot_Task_History_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>Branch Opeartions - Rajkot</label>
    <queue>Branch_Opeartions_Rajkot</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>