force-app/main/default/objects/Task_History_Matrix__c/listViews/Branch_Operations_Chakan_Task_History_Matrix.listView-meta.xml
<ListView>
    <fullName>Branch_Operations_Chakan_Task_History_Matrix</fullName>
    <filterScope>Queue</filterScope>
    <label>Branch Operations - Chakan</label>
    <queue>Branch_Operations_Chakan</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>